# rt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt  imgui.ini
include/: app.hpp  camera.hpp  config.hpp  data.hpp  load.hpp  mesh.hpp  options.hpp  program.hpp  renderer.hpp  scene.hpp  shader.hpp  surface.hpp  vec3.hpp
shaders/: acc.frag  acc.vert  closesthit.glsl  globals.glsl  helpers.glsl  hit.glsl  main.frag  main.vert  output.frag  postprocess.frag  pt.frag  scatter.glsl  tm.frag  uniforms.glsl  vertex.glsl
src/: app.cpp  camera.cpp  load.cpp  main.cpp  mesh.cpp  program.cpp  renderer.cpp  scene.cpp  shader.cpp  surface.cpp
submodules/RadeonRays/: bbox.cpp  bbox.hpp  bvh.cpp  bvh.hpp  bvh_translator.cpp  bvh_translator.hpp  split_bvh.cpp  split_bvh.hpp
